đặt nút theo dõi vào form

--- a/views/search/result.hbs
+++ b/views/search/result.hbs
@@ -139,9 +139,11 @@
                                 <button type="button" class="btn btn-default" style="box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%">
                                     <span style="font-weight: bold;color: #fff; font-size: 80%">Đấu giá</span>
                                 </button>
-                                <button type="button" class="btn btn-default" style="box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #FDD835; margin-top: 1%">
-                                    <span style="font-weight: bold;color: #fff; font-size: 80% ">Theo dõi</span>
-                                </button>
+								<form method="post">
+									<button type="button" class="btn btn-default" style="box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #FDD835; margin-top: 1%">
+										<span style="font-weight: bold;color: #fff; font-size: 80% ">Theo dõi</span>
+									</button>
+								<form>
                             </div>
                         </div>
                     </div>
