cập nhật breadcrumbs
các view bid.hbs, bidlog.hbs, cannotbid.hbs, detail.hbs

--- a/views/product/bid.hbs
+++ b/views/product/bid.hbs
@@ -63,7 +63,7 @@
     <div class="row container-fluid" style="background: #f4f4f4;">
         <ol class="breadcrumb breadcrumb-arrow">
             <li><a href="/home">Trang chủ</a></li>
-            <li><a href="#">Sản phẩm</a></li>
+            <li><a href="/product/detail/{{product.madaugia}}">Sản phẩm</a></li>
             <li class="active"><span>Trả giá</span></li>
         </ol>
     </div>
