--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -22,7 +22,7 @@
     <div class="row container-fluid">
         <ol class="breadcrumb breadcrumb-arrow">
             <li><a href="/home">Trang chủ</a></li>
-            <li><a href="#">Tìm kiếm</a></li>
+            <li><a href="/search">Tìm kiếm</a></li>
             <li class="active"><span>Chi tiết sản phẩm</span></li>
         </ol>
     </div>
