--- a/views/product/bidlog.hbs
+++ b/views/product/bidlog.hbs
@@ -37,7 +37,7 @@
     <div class="row container-fluid">
         <ol class="breadcrumb breadcrumb-arrow">
             <li><a href="/home">Trang chủ</a></li>
-            <li><a href="#">Sản phẩm</a></li>
+            <li><a href="/product/detail/{{idsp}}">Sản phẩm</a></li>
             <li class="active"><span>Trả giá</span></li>
         </ol>
     </div>
