--- a/views/account/sellingList.hbs
+++ b/views/account/sellingList.hbs
@@ -59,7 +59,7 @@
                         <div class="row ">
                             <!-- Tên sản phẩm -->
                             <div class="col-md-6 ">
-                                <a class="media-heading " style="font-size: 150%;font-weight: bold; " href="# ">{{tensp}}</a>
+                                <a class="media-heading " style="font-size: 150%;font-weight: bold; " href="/product/detail/{{madaugia}}">{{tensp}}</a>
                                 <br>
                                 <div style="vertical-align: text-bottom">
                                     <span>Người đăng bán: </span> <a href="# ">{{tennguoiban}}</a>
@@ -103,10 +103,10 @@
                                 <!-- Lượt đấu giá -->
                                 <span style="font-size: 85% ">Số lượt đấu giá: &nbsp</span>
                                 <div style="text-align: center "><span class="numberical-info-small " style="font-weight: bold; font-size: 130%; color:#f00 ">{{solandaugia}}</span>&nbsplượt</div>
-                                <!-- Nút đấu giá -->
-                                <button class="btn btn-default " style="width:100%;box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%">
-                                    <span style="font-weight: bold;color: #fff; ">Đấu giá</span>
-                                </button>
+                                <!-- Nút cập nhật -->
+                                <a class="btn btn-default " style="width:100%;box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%" href="/account/editAuction?id={{madaugia}}">
+                                    <span style="font-weight: bold;color: #fff;">Cập nhật</span>
+                                </a>
                             </div>
                         </div>
                     </div>
