Sửa vài chi tiết nhỏ

--- a/views/search/result.hbs
+++ b/views/search/result.hbs
@@ -136,14 +136,14 @@
                             <div style="text-align: center "><span class="numberical-info-small " style="font-weight: bold; font-size: 130%; color:#f00 ">{{solandaugia}}</span>&nbsplượt</div>
                             <!-- Nút đấu giá -->
                             <div class="btn-group" role="group" aria-label="...">
-                                <button type="button" class="btn btn-default" style="box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%">
+                                <a href="/product/bid/{{madaugia}}" class="btn btn-default" style="box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%">
                                     <span style="font-weight: bold;color: #fff; font-size: 80%">Đấu giá</span>
-                                </button>
+                                </a>
 								<form method="post">
 									<button type="button" class="btn btn-default" style="box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #FDD835; margin-top: 1%">
 										<span style="font-weight: bold;color: #fff; font-size: 80% ">Theo dõi</span>
 									</button>
-								<form>
+								</form>
                             </div>
                         </div>
                     </div>
