Sửa đưởng dẫn đấu giá

--- a/views/account/bidingList.hbs
+++ b/views/account/bidingList.hbs
@@ -103,10 +103,10 @@
                                 <!-- Lượt đấu giá -->
                                 <span style="font-size: 85% ">Số lượt đấu giá: &nbsp</span>
                                 <div style="text-align: center "><span class="numberical-info-small " style="font-weight: bold; font-size: 130%; color:#f00 ">{{solandaugia}}</span>&nbsplượt</div>
-                                <!-- Nút đấu giá -->
-                                <button class="btn btn-default " style="width:100%;box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%">
+                               <!-- Nút đấu giá -->
+                                <a class="btn btn-default " style="width:100%;box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%" href="/product/bid/{{madaugia}}">
                                     <span style="font-weight: bold;color: #fff; ">Đấu giá</span>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
