--- a/views/_partials/header.hbs
+++ b/views/_partials/header.hbs
@@ -7,7 +7,7 @@
             <div class="col-md-4"></div>
             <div class="col-md-8">
                 <a class="logo" href="index.html">
-                    <img src="images/logo.png" alt="logo">
+                    <img src="/Imgs/logo.png" alt="logo">
                 </a>
             </div>
         </div>
