--- a/views/account/sellingList.hbs
+++ b/views/account/sellingList.hbs
@@ -104,7 +104,7 @@
                                 <span style="font-size: 85% ">Số lượt đấu giá: &nbsp</span>
                                 <div style="text-align: center "><span class="numberical-info-small " style="font-weight: bold; font-size: 130%; color:#f00 ">{{solandaugia}}</span>&nbsplượt</div>
                                 <!-- Nút cập nhật -->
-                                <a class="btn btn-default " style="width:100%;box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%" href="/account/editAuction?id={{madaugia}}">
+                                <a class="btn btn-default " style="width:100%;box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.2);border: none;border-radius: 0px;background-color: #0CC81E; margin-top: 1%" href="/account/editAuction/{{madaugia}}">
                                     <span style="font-weight: bold;color: #fff;">Cập nhật</span>
                                 </a>
                             </div>
